--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "repository": {
   },
   "dependencies": {
+    "bower": "^1.4.1",
     "brunch": "^1.8.5",
-    "babel-brunch": "^5.1.1",
     "clean-css-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
-    "javascript-brunch": ">= 1.0 < 1.8",
-    "uglify-js-brunch": ">= 1.0 < 1.8"
+    "sass-brunch": "^1.8.10"
   }
 }
